Email sign_up sign_in with JWT implemented
Test coverage provided

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # postgres
-DB_NAME=rightdb
-DB_USERNAME=billy
-DB_PASSWORD=leatherman
+DB_NAME: rightdb
+DB_USERNAME: billy
+DB_PASSWORD: leatherman
 
+# mailer
+MAIL_FROM: right-version@gmail.com
